#!/usr/bin/env node

const fs = require('fs');
const path = require('path');
const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');

/**
 * Fabric 전용 인덱싱 클라이언트
 * idxmngr-go 서버와 통신하여 Fabric 네트워크 데이터를 인덱싱
 */
class FabricIndexingClient {
  constructor(options = {}) {
    this.serverAddr = options.serverAddr || 'localhost:50052';
    this.protoPath = options.protoPath || '../../idxmngr-go/protos/index_manager.proto';
    this.client = null;
    this.connected = false;
  }

  /**
   * idxmngr-go 서버에 연결
   */
  async connect() {
    try {
      console.log(`🔗 Fabric 인덱싱 서버 연결 시도: ${this.serverAddr}`);
      
      // 실제 gRPC 연결 구현 (현재는 시뮬레이션)
      this.client = {
        connected: true,
        serverAddr: this.serverAddr
      };
      
      this.connected = true;
      console.log('✅ Fabric 인덱싱 서버 연결 성공');
      return true;
      
    } catch (error) {
      console.error('❌ Fabric 인덱싱 서버 연결 실패:', error.message);
      throw error;
    }
  }

  /**
   * Fabric 인덱스 생성
   * @param {Object} indexInfo - 인덱스 정보
   * @param {string} indexInfo.IndexID - 인덱스 ID
   * @param {string} indexInfo.IndexName - 인덱스 이름
   * @param {string} indexInfo.KeyCol - 키 컬럼
   * @param {string} indexInfo.FilePath - 파일 경로
   * @param {number} indexInfo.KeySize - 키 크기
   * @param {string} indexInfo.Network - 네트워크 타입
   */
  async createIndex(indexInfo) {
    try {
      if (!this.connected) {
        throw new Error('서버에 연결되지 않음. connect() 메서드를 먼저 호출하세요.');
      }

      console.log(`📊 Fabric 인덱스 생성 중: ${indexInfo.IndexID}`);
      
      // 실제 gRPC 호출 구현 (현재는 시뮬레이션)
      const result = {
        success: true,
        indexID: indexInfo.IndexID,
        message: 'Fabric 인덱스 생성 성공',
        filePath: indexInfo.FilePath
      };
      
      console.log(`✅ Fabric 인덱스 생성 완료: ${indexInfo.IndexID}`);
      console.log(`📁 파일 경로: ${indexInfo.FilePath}`);
      
      return result;
      
    } catch (error) {
      console.error(`❌ Fabric 인덱스 생성 실패: ${error.message}`);
      throw error;
    }
  }

  /**
   * Fabric 데이터 인덱싱
   * @param {Object} indexData - 인덱싱할 데이터
   * @param {string} indexData.IndexID - 인덱스 ID
   * @param {Array} indexData.BcList - 블록체인 데이터 리스트
   * @param {string} indexData.ColName - 컬럼 이름
   * @param {string} indexData.ColIndex - 컬럼 인덱스
   * @param {string} indexData.FilePath - 파일 경로
   * @param {string} indexData.Network - 네트워크 타입
   */
  async insertData(indexData) {
    try {
      if (!this.connected) {
        throw new Error('서버에 연결되지 않음. connect() 메서드를 먼저 호출하세요.');
      }

      console.log(`📊 Fabric 데이터 인덱싱 중: ${indexData.IndexID}`);
      
      // 실제 gRPC 호출 구현 (현재는 시뮬레이션)
      const result = {
        success: true,
        indexID: indexData.IndexID,
        message: 'Fabric 데이터 인덱싱 성공',
        filePath: indexData.FilePath,
        dataCount: indexData.BcList ? indexData.BcList.length : 0
      };
      
      console.log(`✅ Fabric 데이터 인덱싱 완료: ${indexData.IndexID}`);
      console.log(`📁 인덱스 파일: ${indexData.FilePath}`);
      console.log(`📊 인덱싱된 데이터 수: ${result.dataCount}`);
      
      return result;
      
    } catch (error) {
      console.error(`❌ Fabric 데이터 인덱싱 실패: ${error.message}`);
      throw error;
    }
  }

  /**
   * Fabric 인덱스 조회
   * @param {string} indexID - 조회할 인덱스 ID
   */
  async getIndex(indexID) {
    try {
      if (!this.connected) {
        throw new Error('서버에 연결되지 않음. connect() 메서드를 먼저 호출하세요.');
      }

      console.log(`🔍 Fabric 인덱스 조회 중: ${indexID}`);
      
      // 실제 gRPC 호출 구현 (현재는 시뮬레이션)
      const result = {
        success: true,
        indexID: indexID,
        exists: true,
        message: 'Fabric 인덱스 조회 성공'
      };
      
      console.log(`✅ Fabric 인덱스 조회 완료: ${indexID}`);
      return result;
      
    } catch (error) {
      console.error(`❌ Fabric 인덱스 조회 실패: ${error.message}`);
      throw error;
    }
  }

  /**
   * Fabric 인덱스 삭제
   * @param {string} indexID - 삭제할 인덱스 ID
   */
  async deleteIndex(indexID) {
    try {
      if (!this.connected) {
        throw new Error('서버에 연결되지 않음. connect() 메서드를 먼저 호출하세요.');
      }

      console.log(`🗑️ Fabric 인덱스 삭제 중: ${indexID}`);
      
      // 실제 gRPC 호출 구현 (현재는 시뮬레이션)
      const result = {
        success: true,
        indexID: indexID,
        message: 'Fabric 인덱스 삭제 성공'
      };
      
      console.log(`✅ Fabric 인덱스 삭제 완료: ${indexID}`);
      return result;
      
    } catch (error) {
      console.error(`❌ Fabric 인덱스 삭제 실패: ${error.message}`);
      throw error;
    }
  }

  /**
   * 연결 상태 확인
   */
  isConnected() {
    return this.connected;
  }

  /**
   * 서버 연결 종료
   */
  close() {
    if (this.client) {
      this.client.connected = false;
      this.connected = false;
      console.log('🔌 Fabric 인덱싱 서버 연결 종료');
    }
  }
}

module.exports = FabricIndexingClient;
