const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');

// Protobuf íŒŒì¼ ê²½ë¡œ
const PROTO_PATH = '../idxmngr-go/protos/index_manager.proto';

// gRPC ì˜µì…˜ ì„¤ì •
const options = {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
};

// Protobuf ë¡œë“œ
const packageDefinition = protoLoader.loadSync(PROTO_PATH, options);
const idxmngr = grpc.loadPackageDefinition(packageDefinition).idxmngrapi;

class DataInserter {
  constructor(serverAddr = 'localhost:50052') {
    this.serverAddr = serverAddr;
    this.client = null;
    this.connect();
  }

  // gRPC ì„œë²„ì— ì—°ê²°
  connect() {
    try {
      this.client = new idxmngr.Index_manager(
        this.serverAddr,
        grpc.credentials.createInsecure()
      );
      console.log(`âœ… Connected to idxmngr server at ${this.serverAddr}`);
    } catch (error) {
      console.error(`âŒ Failed to connect to idxmngr server: ${error.message}`);
    }
  }

  // IndexableData ë”ë¯¸ ë°ì´í„° ìƒì„±
  generateIndexableDataDummy() {
    const dummyDataList = [];

    // LGì „ì ê´€ë ¨ ë”ë¯¸ ë°ì´í„°
    for (let i = 0; i < 7; i++) {
      const dummyData = {
        TxId: `lg_tx_${i + 1}`,
        OrganizationName: 'LGì „ì',
        ContractAddress: `0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef${i}`,
        EventName: 'OrganizationCreated',
        DataJson: JSON.stringify({
          orgName: 'LGì „ì',
          orgType: 'Electronics',
          country: 'Korea',
          employeeCount: 100000 + i * 1000
        }),
        Timestamp: new Date().toISOString(),
        BlockNumber: 1000000 + i,
        Requester: `user_${i + 1}`,
        ResourceOwner: 'LGì „ì',
        Purpose: 'Business Partnership',
        Status: 'Active'
      };
      dummyDataList.push(dummyData);
    }

    return dummyDataList;
  }

  // ë²”ìš© ì¡°ì§ ì¸ë±ìŠ¤ì— ë°ì´í„° ì‚½ì…
  async insertUniversalOrgData() {
    console.log('\nğŸš€ Inserting data into Universal Organization Index...');
    
    try {
      // ë”ë¯¸ ë°ì´í„° ìƒì„±
      const dummyDataList = this.generateIndexableDataDummy();
      console.log(`ğŸ“Š Generated dummy data: ${dummyDataList.length} records`);

      // BcDataListë¡œ ë³€í™˜
      const bcDataList = dummyDataList.map(data => ({
        TxId: data.TxId,
        key_col: 'IndexableData',
        IndexableData: data
      }));

      const insertData = {
        IndexID: 'lg_002',
        BcList: bcDataList,
        ColName: 'IndexableData',
        FilePath: '/home/blockchain/bi-index-migration/bi-index/fileindex-go/lg.bf'
      };

      console.log('ğŸ“¤ Insert data structure:');
      console.log(JSON.stringify(insertData, null, 2));

      // ìŠ¤íŠ¸ë¦¼ì„ í†µí•œ ë°ì´í„° ì‚½ì…
      return new Promise((resolve, reject) => {
        try {
          // idxmngr-client.jsì™€ ë™ì¼í•œ ë°©ì‹ìœ¼ë¡œ ì½œë°± ì „ë‹¬
          const stream = this.client.InsertIndexRequest((error, response) => {
            if (error) {
              console.error(`âŒ InsertIndexRequest failed: ${error.message}`);
              reject(error);
            } else {
              console.log(`âœ… Insert response received: ${JSON.stringify(response)}`);
              resolve(response);
            }
          });

          // ë°ì´í„° ì „ì†¡
          stream.write(insertData);
          stream.end();
          console.log('âœ… Data sent to stream');
          
        } catch (error) {
          console.error(`âŒ Failed to create stream: ${error.message}`);
          reject(error);
        }
      });

    } catch (error) {
      console.error(`âŒ Data insertion failed: ${error.message}`);
      throw error;
    }
  }

  // ì—°ê²° ì¢…ë£Œ
  close() {
    if (this.client) {
      this.client.close();
      console.log('ğŸ”Œ Connection closed');
    }
  }
}

// ë©”ì¸ ì‹¤í–‰ í•¨ìˆ˜
async function main() {
  const inserter = new DataInserter();
  
  try {
    // ì—°ê²° ì™„ë£Œ ëŒ€ê¸°
    await new Promise(resolve => setTimeout(resolve, 1000));
    
    // ë°ì´í„° ì‚½ì…
    await inserter.insertUniversalOrgData();
    
    console.log('\nğŸ‰ Data insertion test completed successfully!');
    
  } catch (error) {
    console.error('\nğŸ’¥ Data insertion test failed:', error.message);
  } finally {
    inserter.close();
  }
}

// ìŠ¤í¬ë¦½íŠ¸ê°€ ì§ì ‘ ì‹¤í–‰ë  ë•Œë§Œ main í•¨ìˆ˜ ì‹¤í–‰
if (require.main === module) {
  main();
}

module.exports = DataInserter;
